@@ -9,6 +9,7 @@
 * Impr: specifying an item for Netzke::Window is now optional
 * Fix: xtype field in FieldsConfigurator is now a combobox
 * Fix: FieldsConfigurator was crashing when fired consequently for grid and form
+* Depr: :data_class_name option is deprecated, use :model
 
 = v0.5.5.1 - 2009-11-09
 * Compatibility with latest netzke-core
